adjusting the design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/public/icon-plumbus.svg" />
+    <link rel="icon" href="/icon-plumbus.svg" />
     <title>Rick and Morty Web</title>
   </head>
   <body>
